[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interchange"
version = "0.1.0"
description = "Stateful, role-aware routing with context translation at model boundaries"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.50.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
interchange = "interchange.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/interchange"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
